test/corpus/workspace.txt
==================
workspace with name and description
==================

workspace "Workspace Name" "Workspace Description" {

}

---

(source_file
  (workspace (workspace_name) (workspace_description))
)


==================
workspace with name
==================

workspace "Workspace Name" {

}

---

(source_file
  (workspace (workspace_name))
)


==================
workspace
==================

workspace {

}

---

(source_file
  (workspace)
)
